Practicing component communications

--- a/force-app/main/default/lwc/testChild/testChild.html
+++ b/force-app/main/default/lwc/testChild/testChild.html
@@ -7,6 +7,9 @@
             <lightning-layout-item size="12" padding="around-small" small-device-size="3" medium-device-size="6" large-device-size="3">
                 <lightning-output-field field-name="Name"> </lightning-output-field>
             </lightning-layout-item>
+            <lightning-layout-item size="12" padding="around-small" small-device-size="3" medium-device-size="6" large-device-size="3">
+                <lightning-button variant="neutral" label="Click me" title="Click me" onclick={handleClickMe}></lightning-button>
+            </lightning-layout-item>
         </lightning-layout>
     </lightning-record-view-form>
 </template>
